feat: added nftables

--- a/nftables.conf
+++ b/nftables.conf
@@ -4,24 +4,65 @@ flush ruleset
 
 table inet filter {
     chain input {
-        type filter hook input priority 0;
+        type filter hook input priority 0; policy drop;
 
-        # Allow loopback
+        # ===== Allow basic traffic =====
         iif lo accept
-
-        # Allow established/related traffic
         ct state established,related accept
 
-        # Allow SSH
+        # ===== SSH =====
         tcp dport 22 accept
 
-        # Limit inbound TCP (Prysm libp2p)
-        tcp dport 13000 ct count over 20 drop
+        # ===== P2P blockchain sync (default Ethereum/Geth) =====
+        tcp dport 30303 accept
+        udp dport 30303 accept
 
-        # Limit inbound UDP (Prysm QUIC)
-        udp dport 12000 ct count over 20 drop
+        # ===== Prysm libp2p (limit max 10 concurrent connections) =====
+        # TCP P2P - limit 10 concurrent connections
+        tcp dport 13000 ct count over 10 drop
+        tcp dport 13000 accept
+        
+        # UDP Discovery - limit 10 concurrent connections  
+        udp dport 12000 ct count over 10 drop
+        udp dport 12000 accept
 
-        # Drop everything else by default
+        # ===== Execution client RPC (HTTP JSON-RPC) =====
+        # Allow localhost only
+        ip saddr 127.0.0.1 tcp dport 8545 accept
+
+        # Allow LAN subnet
+        ip saddr 192.168.1.0/24 tcp dport 8545 accept
+
+        # ===== WebSocket endpoint =====
+        ip saddr 127.0.0.1 tcp dport 8546 accept
+        ip saddr 192.168.1.0/24 tcp dport 8546 accept
+
+        # ===== Auth RPC (for consensus client) =====
+        ip saddr 127.0.0.1 tcp dport 8551 accept
+
+        # ===== Prysm monitoring ports =====
+        ip saddr 192.168.1.0/24 tcp dport 4000 accept
+        ip saddr 192.168.1.0/24 tcp dport 3500 accept
+
+        # ===== Allow ICMP for network diagnostics =====
+        icmp type echo-request limit rate 10/second accept
+        icmp type destination-unreachable accept
+        icmp type time-exceeded accept
+
+        # ===== Log dropped packets (optional, untuk debugging) =====
+        # log prefix "nft-drop: " level info
+
+        # ===== Default deny =====
         drop
+    }
+
+    chain output {
+        type filter hook output priority 0; policy accept;
+        # Izinkan semua outbound traffic
+    }
+
+    chain forward {
+        type filter hook forward priority 0; policy drop;
+        # Drop semua forwarded traffic jika tidak diperlukan
     }
 }
