feat: added nftables

--- a/nftables.conf
+++ b/nftables.conf
@@ -3,6 +3,19 @@
 flush ruleset
 
 table inet filter {
+    # ===== Define reusable sets =====
+    set rpc_allow_ips {
+        type ipv4_addr;
+        elements = {
+            
+        }
+    }
+
+    set prysm_monitor_ports {
+        type inet_service;
+        elements = { 4000, 3500 }
+    }
+
     chain input {
         type filter hook input priority 0; policy drop;
 
@@ -13,44 +26,35 @@ table inet filter {
         # ===== SSH =====
         tcp dport 22 accept
 
-        # ===== P2P blockchain sync (default Ethereum/Geth) =====
+        # ===== Ethereum P2P sync =====
         tcp dport 30303 accept
         udp dport 30303 accept
 
-        # ===== Prysm libp2p (limit max 10 concurrent connections) =====
-        # TCP P2P - limit 10 concurrent connections
-        tcp dport 13000 ct count over 10 drop
+        # ===== Prysm libp2p (limit connections) =====
+        tcp dport 13000 ct count over 2 drop
         tcp dport 13000 accept
-        
-        # UDP Discovery - limit 10 concurrent connections  
-        udp dport 12000 ct count over 10 drop
+        udp dport 12000 ct count over 2 drop
         udp dport 12000 accept
 
-        # ===== Execution client RPC (HTTP JSON-RPC) =====
-        # Allow localhost only
+        # ===== Execution client RPC =====
         ip saddr 127.0.0.1 tcp dport 8545 accept
-
-        # Allow LAN subnet
-        ip saddr 192.168.1.0/24 tcp dport 8545 accept
+        ip saddr @rpc_allow_ips tcp dport 8545 accept
 
         # ===== WebSocket endpoint =====
         ip saddr 127.0.0.1 tcp dport 8546 accept
-        ip saddr 192.168.1.0/24 tcp dport 8546 accept
+        ip saddr @rpc_allow_ips tcp dport 8546 accept
 
-        # ===== Auth RPC (for consensus client) =====
+        # ===== Auth RPC (consensus client) =====
         ip saddr 127.0.0.1 tcp dport 8551 accept
 
         # ===== Prysm monitoring ports =====
-        ip saddr 192.168.1.0/24 tcp dport 4000 accept
-        ip saddr 192.168.1.0/24 tcp dport 3500 accept
+        ip saddr 127.0.0.1 tcp dport @prysm_monitor_ports accept
+        ip saddr @rpc_allow_ips tcp dport @prysm_monitor_ports accept
 
-        # ===== Allow ICMP for network diagnostics =====
+        # ===== ICMP diagnostics =====
         icmp type echo-request limit rate 10/second accept
         icmp type destination-unreachable accept
         icmp type time-exceeded accept
-
-        # ===== Log dropped packets (optional, untuk debugging) =====
-        # log prefix "nft-drop: " level info
 
         # ===== Default deny =====
         drop
@@ -58,11 +62,9 @@ table inet filter {
 
     chain output {
         type filter hook output priority 0; policy accept;
-        # Izinkan semua outbound traffic
     }
 
     chain forward {
         type filter hook forward priority 0; policy drop;
-        # Drop semua forwarded traffic jika tidak diperlukan
     }
 }
