--- a/docker-compose-reth.yml
+++ b/docker-compose-reth.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   reth:
     image: ghcr.io/paradigmxyz/reth:latest
@@ -24,13 +26,11 @@ services:
       - --authrpc.jwtsecret=/jwt.hex
       - --metrics=0.0.0.0:9001
       - --port=30303
-      - --max-peers=100
       - --ipcdisable
       - --memory-limit=40G
       - --max-blocks=64
       - --discovery.max-outgoing=40
       - --peers.connect-timeout=15
-      - --sync.mode=snap
     deploy:
       resources:
         limits:
