--- a/docker-compose-reth.yml
+++ b/docker-compose-reth.yml
@@ -14,11 +14,11 @@ services:
       - --http
       - --http.addr=0.0.0.0
       - --http.port=8545
-      - --http.api=eth,net,web3,engine
+      - --http.api=eth,net,web3,debug,trace,txpool
       - --ws
       - --ws.addr=0.0.0.0
       - --ws.port=8546
-      - --ws.api=eth,net,web3,engine
+      - --ws.api=eth,net,web3,debug,trace,txpool
       - --authrpc.addr=0.0.0.0
       - --authrpc.port=8551
       - --authrpc.jwtsecret=/jwt.hex
