--- a/docker-compose-reth.yml
+++ b/docker-compose-reth.yml
@@ -7,10 +7,12 @@ services:
     volumes:
       - /root/ethereum/execution:/data
       - /root/ethereum/jwt.hex:/jwt.hex
+      - /root/ethereum/execution/reth.toml:/config/reth.toml
     command:
       - node
       - --chain=sepolia
       - --datadir=/data
+      - --config=/config/reth.toml
       - --http
       - --http.addr=0.0.0.0
       - --http.port=8545
@@ -22,7 +24,6 @@ services:
       - --authrpc.addr=0.0.0.0
       - --authrpc.port=8551
       - --authrpc.jwtsecret=/jwt.hex
-      - --metrics=0.0.0.0:9001
       - --port=30303
       - --ipcdisable
     deploy:
@@ -36,8 +37,8 @@ services:
         max-file: "3"
     ulimits:
       nofile:
-        soft: 262144
-        hard: 262144
+        soft: 1048576
+        hard: 1048576
 
   prysm:
     image: gcr.io/offchainlabs/prysm/beacon-chain:v6.1.3
@@ -81,5 +82,5 @@ services:
         max-file: "3"
     ulimits:
       nofile:
-        soft: 262144
-        hard: 262144
+        soft: 1048576
+        hard: 1048576
